--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -100,6 +100,7 @@
 @column-left-bg:                    darken(@body-bg, @column-darkening * 6.18);
 @column-center-bg:                  darken(@body-bg, @column-darkening * (6.18 * 0.618));
 @column-right-bg:                   darken(@body-bg, @column-darkening * 0);
+@column-top-height:                 22px;
 
 
 @footer-height:                     25px;
