impr(layout): add some space to the layout controls
Related to: CAM-3044

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -244,6 +244,11 @@ button.reset-regions {
   display: none;
 }
 
+button.maximize,
+button.reset-regions {
+  margin: 0 (@grid-gutter-width / 3);
+}
+
 
 // S+ (columns layout)
 @media (min-width: @screen-sm-min) {
