impr(styles): move the pagination styles
Because they are also used in the process start modal, move the
pagination styles to the generic styles file.

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -309,3 +309,24 @@ strong {
   position: relative;
   padding-top: @grid-gutter-width;
 }
+
+
+
+
+.pagination {
+  display: block;
+  clear: both;
+  overflow: visible;
+  text-align: center;
+  margin: (@grid-gutter-width / 2) auto;
+  li {
+    overflow: visible;
+    a {
+      float: none;
+      border: none;
+    }
+  }
+  .active a {
+    background-color: @gray-light;
+  }
+}
