--- a/client/client/scripts/filter/styles.less
+++ b/client/client/scripts/filter/styles.less
@@ -168,11 +168,44 @@
 }
 
 
-.filter-edit-modal {
+.filter-modal {
   .panel-title {
     .glyphicon {
       font-size: @font-size-base;
       color: @brand-danger;
     }
+  }
+
+  .user-read-permissions {
+    .btn-link {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .input-group-btn:first-child > .btn {
+      border-right: 0;
+    }
+
+    input.ng-invalid-authorization.ng-valid-duplicate {
+      color: @input-color;
+      background-color: @input-bg;
+      border-color: @input-border;
+      .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+      .form-control-focus();
+    }
+
+    .form-control-static {
+      padding-top: 8px;
+    }
+
+    .fake-button {
+      display: inline-block;
+      text-align: center;
+      width: 39px;
+    }
+  }
+
+  .global-access {
+    margin: 0 0 (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5);
   }
 }
