--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -292,41 +292,45 @@
   display: block;
   width: auto;
   max-width: 100%;
-  margin-left: -5px;
+  margin: 0 0 (@grid-gutter-width / 3) 0;
+  padding: 0;
 
-  li {
+  > li {
     float: none;
     display: block;
+    margin: 0;
+    padding: 0;
     width: auto;
     max-width: 100%;
-    min-height: 26px;
-    vertical-align: top;
+    height: 26px;
 
     &.set-value {
       padding-top: 3px;
     }
   }
 
-  &.actors {
-    text-align: left;
-  }
-
   .groups {
-    padding-left: 10px;
-    padding-top: 3px;
-    .glyphicon {
-      vertical-align: top;
-    }
+    > div {
+      padding-top: 3px;
 
-    a {
-      display: inline-block;
-      max-width: 100%;
-      padding-left: 24px;
-      margin-left: -20px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      > .glyphicon,
+      > a {
+        vertical-align: top;
+      }
+
+      .glyphicon {
+        top: 2px;
+      }
+
+      a {
+        display: inline-block;
+        max-width: 100%;
+        padding-left: 20px;
+        margin-left: -20px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
     }
   }
 
@@ -334,8 +338,10 @@
   [cam-widget-inline-field] {
     white-space: nowrap;
     max-width: 100%;
-    padding-right: 24px;
-    margin-right: -24px;
+    padding-right: 20px;
+    margin-right: -20px;
+    margin-left: -3px;
+
     &.inline-editing {
       padding-right: 0;
       margin-right: 0;
@@ -346,7 +352,6 @@
       .ng-binding {
         max-width: 100%;
         white-space: nowrap;
-        overflow: hidden;
         text-overflow: ellipsis;
         overflow: hidden;
       }
@@ -362,15 +367,14 @@
 // S
 @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
   body {
-    &.ilters-column-close,
     &.list-column-close {
       .task-card .meta {
         float: left;
         width: 50%;
 
-        li {
+        > li {
           float: left;
-          width: 49%;
+          width: 50%;
         }
       }
     }
@@ -384,16 +388,16 @@
     float: left;
     width: 50%;
   }
+
   body {
-    &.ilters-column-close,
     &.list-column-close {
       .task-card .meta {
         float: left;
         width: 50%;
 
-        li {
+        > li {
           float: left;
-          width: 49%;
+          width: 50%;
         }
       }
     }
@@ -406,9 +410,9 @@
     float: left;
     width: 50%;
 
-    li {
+    > li {
       float: left;
-      width: 49%;
+      width: 50%;
     }
   }
 }
