--- a/client/client/scripts/filter/styles.less
+++ b/client/client/scripts/filter/styles.less
@@ -205,6 +205,7 @@
     }
   }
 
+  .undefined-variable,
   .global-access {
     margin: 0 0 (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5);
   }
