feat(variables): display undefined variables when wanted
Related to: CAM-3058

--- a/client/client/scripts/variable/styles.less
+++ b/client/client/scripts/variable/styles.less
@@ -48,6 +48,10 @@
     background-repeat: repeat-x;
   }
 
+  .undefined {
+    color: fade(@text-color, 50%);
+  }
+
 
   div.row {
     margin-bottom: (@grid-gutter-width / 5);
