impr(task list): change the style of assignee
And add a tooltip on the name in order to be able to read more or all of
the name.

Related to: CAM-3075

--- a/client/client/scripts/tasklist/styles.less
+++ b/client/client/scripts/tasklist/styles.less
@@ -71,3 +71,19 @@ ol.tasks-list {
     outline: none;
   }
 }
+
+
+ol.tasks-list {
+  li.assignee {
+    // the assignee is the only "item" in the list, use the whole width then
+    width: 100%;
+  }
+}
+
+@media (min-width: @screen-md-min) {
+  ol.tasks-list {
+    li.assignee {
+      text-align: right;
+    }
+  }
+}
