impr(styles): use variables for styling

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -35,7 +35,7 @@
 }
 
 .diagram-loader {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: fade(@body-bg, 40%);
   position: absolute;
   z-index: 5;
   top: 0;
