--- a/client/client/styles/_forms.less
+++ b/client/client/styles/_forms.less
@@ -3,7 +3,7 @@
   &:before {
     display: block;
     content: ' ';
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: fade(@body-bg, 33%);
     position: absolute;
     top: 0;
     left: 0;
