--- a/client/client/styles/_notifications-panel.less
+++ b/client/client/styles/_notifications-panel.less
@@ -9,8 +9,8 @@
     float: right;
     font-size: 20px;
     font-weight: bold;
-    color: #000;
-    text-shadow: 0 1px 0 #fff;
+    color: @text-color;
+    text-shadow: 0 1px 0 @body-bg;
     opacity: .2;
 
     padding: 0;
