fix(IE9): change display of layout toggle buttons
Related to: CAM-3082

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -314,7 +314,7 @@ button.reset-regions {
 
     button.maximize,
     button.region-toggle {
-      display: initial;
+      display: inline-block;
     }
 
     button.reset-regions {
