--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -114,7 +114,7 @@ button.region-toggle {
     display: block;
     width: @column-top-height;
     height: 3px;
-    background-color: @brand-primary;
+    background-color: @link-color;
   }
 
   .icon-bar + .icon-bar {
@@ -361,7 +361,7 @@ button.reset-regions {
   }
 
   .task-column-close {
-    .variables-list {
+    [cam-tasklist-variables] .variables-list {
       max-height: 20000px;
       .shutter {
         display: none
