--- a/client/client/styles/_mixins.less
+++ b/client/client/styles/_mixins.less
@@ -11,8 +11,7 @@
   max-width: @max-width;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow-x: hidden;
-  overflow-y: visible;
+  overflow: hidden;
 }
 
 
