--- a/client/client/scripts/process/modals/cam-tasklist-process-start-modal.less
+++ b/client/client/scripts/process/modals/cam-tasklist-process-start-modal.less
@@ -1,30 +1,20 @@
 ul.processes {
   list-style: none;
   padding: 0;
-  margin: 15px 0 0 0;
+  margin: (@grid-gutter-width / 2) 0 0 0;
 
   max-height: 300px;
   overflow: auto;
-}
 
-.processes {
   li {
     padding: 7px 0;
     border-bottom: 1px @line-style @line-color;
-
-    // &:nth-child(even) {
-    //   background-color: @gray-lighter;
-    // }
 
     &:hover {
       background-color: @gray-lighter;
     }
 
-    &:first-child {
-      // padding-top: 0;
-    }
     &:last-child {
-      // padding-bottom: 0;
       border-bottom: 0;
     }
   }
