chore(help): add a less variables example
Related to: CAM-3088

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -47,6 +47,17 @@
 
 
 
+/**
+ * Advanced customization using less variables
+ * If you want to customize the appearance of the tasklist using variables, it is recommended to
+ * change the content of the `_variables-override` and uncomment the following line.
+ *
+ * After changes have been made, you will need to re-compile the styles.
+ */
+// @import "_variables-override";
+
+
+
 @font-face {
     font-family: 'open_sanslight';
     src: url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.eot');
