impr(tasks list): change the default sorting order to descending
Related to: CAM-3112

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -282,6 +282,7 @@ a:focus {
 
 @import "../scripts/task/plugins/detail/cam-tasklist-task-detail-diagram-plugin";
 @import "../scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin";
+@import "../scripts/task/plugins/action/cam-tasklist-task-action-comment-plugin";
 @import "../scripts/task/directives/cam-tasklist-task-meta";
 @import "../scripts/task/directives/cam-tasklist-task";
 @import "../scripts/task/modals/cam-tasklist-groups-modal";
